@@ -1,0 +1,10 @@
+using System;
+
+namespace Mastermind
+{
+        public enum Response
+        {
+                CORRECT = 0, EXISTS, WRONG
+        }
+}
+
